# my_malloc

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  calloc.c  free.c  main.c  malloc.c  malloc.h  realloc.c  realloc_sup.c  show_malloc.c  test
lib/: .#malloc.c  Makefile  free.c  malloc.c  malloc.h  my.h  my_power.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_strlen.c  realloc.c  realloc_sup.c  show_malloc.c
